--- a/APM - Start/.vscode/settings.json
+++ b/APM - Start/.vscode/settings.json
@@ -5,5 +5,10 @@
         "**/.DS_Store": true
     }, 
     // Controls auto save of dirty files. Accepted values:  "off", "afterDelay", "onFocusChange". If set to "afterDelay" you can configure the delay in "files.autoSaveDelay".
-    "files.autoSave": "afterDelay"
+    "files.autoSave": "afterDelay",
+    "editor.formatOnType": true,
+    "editor.autoClosingBrackets": true,
+    "editor.quickSuggestions": true,
+    "editor.acceptSuggestionOnEnter": true,
+    "window.openFilesInNewWindow": true
 }
